# django-query-rs

./: Cargo.toml  README.md
derive-queryable/: Cargo.toml
derive-queryable/src/: lib.rs
django-query/: Cargo.toml
django-query/src/: filtering.rs  lib.rs  mock.rs  operators.rs  ordering.rs  row.rs  sorting.rs
django-query/src/filtering/: mod.rs  ops.rs
django-query/src/persian_rug/: filtering.rs  mod.rs  row.rs  sorting.rs
django-query_derive/: Cargo.toml
django-query_derive/src/: attributes.rs  filtering.rs  lib.rs  ordering.rs  row.rs  sorting.rs
django-query_derive/src/persian_rug/: filtering.rs  helpers.rs  mod.rs  row.rs  sorting.rs
django_derive/: Cargo.toml
django_derive/src/: attributes.rs  filtering.rs  lib.rs  ordering.rs  row.rs
src/: filtering.rs  lib.rs  operators.rs
test_suite/: Cargo.toml
test_suite/src/: filtering.rs  lib.rs  mock.rs  ordering.rs  row.rs  sorting.rs  state.rs
