[package]
name = "lava-api-mock"
version = "0.1.0"
authors = ["Edmund Smith <ed.smith@collabora.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "^1.0.97", features = ["derive"] }
serde_json = "^1"
tokio = { version = "1.4", features = ["macros", "rt", "rt-multi-thread", "sync"] }
strum = { version = "0.21" }
url = "2"
thiserror = "1.0"
log = "0.4"
wiremock = { version = "*" }
itertools = { version = "*" }
rand = { version = "0.8" }
arc-swap = "1.4"
rand_chacha = "0.3"

derive-queryable = { path="derive-queryable" }

[dev-dependencies]
anyhow = "1"
lava-api = { path = "../lava-api" }
