[package]
name = "django-query"
version = "0.1.0"
authors = ["Edmund Smith <ed.smith@collabora.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
django_derive= { path="../django_derive" }
log = "0.4"
regex = "1"
serde_json = "1"
strum = { version = "0.21" }
thiserror = "1.0"
wiremock = { version="0.5", optional=true }

[features]
default = [ "mock" ]
mock = [ "wiremock"  ]

[dev-dependencies]
env_logger = "0.9"
test-log="0.2"
reqwest = { version = "0.11", features= ["json"] }
tokio = { version = "1.4", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-test = "0.4"