[package]
name = "django-query"
version = "0.2.1"
authors = ["Edmund Smith <ed.smith@collabora.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tools for mocking Django-style endpoints"
repository = "https://github.com/eds-collabora/django-query-rs"
keywords = [ "mock", "django", "testing" ]
categories = [ "asynchronous", "development-tools" ]
readme = "../README.md"

[dependencies]
anyhow = "1"
chrono = "0.4"
django-query_derive= { version = "0.2", path="../django-query_derive" }
log = "0.4"
regex = "1"
serde_json = "1"
strum = { version = "0.21" }
thiserror = "1.0"
wiremock = { version="0.5", optional=true }
persian-rug = { version="0.1", optional=true }
clone-replace = { version="0.1", optional=true }

[features]
default = [ "wiremock" ]
filter = []
sort = []
row = []
wiremock = [ "dep:wiremock", "filter", "sort", "row" ]
persian-rug = [ "dep:persian-rug" ]
clone-replace = [ "dep:clone-replace" ]

[dev-dependencies]
env_logger = "0.9"
http = "0.2"
test-log="0.2"
reqwest = { version = "0.11", features= ["json"] }
tokio = { version = "1.4", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
