[package]
name = "django-query_derive"
version = "0.1.0"
authors = ["Edmund Smith <ed.smith@collabora.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for the django-query crate"
repository = "https://github.com/eds-collabora/django-query-rs"
keywords = [ "mock", "django", "testing" ]
categories = [ "asynchronous", "development-tools" ]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0", features=["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
